Commit pending changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1541,13 +1541,18 @@ endif()
 
 if(BUILD_PSCALD)
     set(DISASSEMBLER_SOURCES src/disassembler/main.c)
+    set(ASSEMBLER_SOURCES src/disassembler/assembler_main.c)
     if(NOT PSCAL_PLATFORM_IOS)
         add_pscal_executable(pscald ${DISASSEMBLER_SOURCES})
+        add_pscal_executable(pscalasm ${ASSEMBLER_SOURCES})
     endif()
     if(PSCAL_BUILD_STATIC_LIBS)
         pscal_add_static_library(pscal_pscald_static
             SOURCES ${DISASSEMBLER_SOURCES})
         target_link_libraries(pscal_pscald_static PUBLIC pscal_core_static)
+        pscal_add_static_library(pscal_pscalasm_static
+            SOURCES ${ASSEMBLER_SOURCES})
+        target_link_libraries(pscal_pscalasm_static PUBLIC pscal_core_static)
     endif()
 endif()
 
@@ -1894,7 +1899,7 @@ if(NOT PSCAL_PLATFORM_IOS)
                 RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
     endif()
     if(BUILD_PSCALD)
-        install(TARGETS pscald
+        install(TARGETS pscald pscalasm
                 RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
     endif()
 
@@ -2102,6 +2107,9 @@ if(TARGET exsh AND PSCAL_FORCE_IOS)
     if(TARGET pscal_pscald_static)
         target_link_libraries(exsh PRIVATE pscal_pscald_static)
     endif()
+    if(TARGET pscal_pscalasm_static)
+        target_link_libraries(exsh PRIVATE pscal_pscalasm_static)
+    endif()
     if(TARGET pscal_json2bc_static)
         target_link_libraries(exsh PRIVATE pscal_json2bc_static)
     endif()
@@ -2184,6 +2192,9 @@ if(PSCAL_PLATFORM_IOS)
     endif()
     if(TARGET pscal_pscald_static)
         list(APPEND _tool_runner_libs pscal_pscald_static)
+    endif()
+    if(TARGET pscal_pscalasm_static)
+        list(APPEND _tool_runner_libs pscal_pscalasm_static)
     endif()
     list(REMOVE_DUPLICATES _tool_runner_libs)
     set(_tool_runner_sdl_libs ${PSCAL_SDL_CORE_LINK_LIBS})
